# Algorithm

./: CMakeLists.txt  test.cpp
solving/: 11049.cpp  14002.cpp  14501.cpp  15486.cpp  17070.cpp  1956.cpp  2150.cpp  21940.cpp  2302.cpp
